--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     apply plugin: 'kotlin-android-extensions'
 
     //api gg fit
-    implementation("com.google.android.gms:play-services-fitness:21.1.0")
-    implementation("com.google.android.gms:play-services-auth:20.3.0")
+    implementation 'com.google.android.gms:play-services-fitness:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
 }
