--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,22 @@ dependencies {
 
     //
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
+    // flexbox
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+    // the google play services client library
+    implementation 'com.google.android.gms:play-services-fitness:21.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
+    //
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.4.1'
+
+    //
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    //
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
 }
